--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install: "pip install -r requirements.txt"
 
 #command to run tests
 script: 
-        "python ./Lab_02/test_FloatCalc.py"
+        "python -m ./Lab_02/unittest"
