--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install: "pip install -r requirements.txt"
 
 #command to run tests
 script: 
-        "python -m ./Lab_02/unittest"
+        "./Lab_02/python -m unittest"
