--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 #command to install dependencies
 install: "pip install -r requirements.txt"
 
+before_script: "cd Lab_03"
+
 #command to run tests
 script: 
         "pytest"
