Trying to make travis pass the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
 #command to install dependencies
 install: "pip install -r requirements.txt"
 
+env:
+  - TEST_DIRECTORY = Lab_02
+  - TEST_DIRECTORY = Lab_03
+
 #command to run tests
 script: 
-        "pytest"
+        "cd $TEST_DIRECTORY && pytest"
