--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install: "pip install -r requirements.txt"
 
 #command to run tests
 script: 
-        "python3.5 -m unittest test_ticTacToeVsComp.py"
+        "cd Lab_03 && python3.5 -m unittest tests/test_ticTacToeVsComp.py"
